# fitster

./: .flake8  .gitignore  .markdownlint.rb  Pipfile  Procfile  README.md  conftest.py  manage.py  pyproject.toml  pytest.ini
.github/workflows/: tests_ci.yml
admin_dashboard/: urls.py  views.py
blog/: forms.py  models.py  sitemap.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/tests/: fixtures.py  test_blog.py
classes/: admin.py  models.py  sitemap.py  urls.py  views.py
classes/migrations/: 0001_initial.py  0002_auto_20220606_1548.py
classes/tests/: fixtures.py  test_classes_models.py
contact/: forms.py  models.py  urls.py  views.py
contact/migrations/: 0001_initial.py
contact/tests/: fixtures.py  test_contact_form.py  test_contact_message_model.py  test_contact_views.py
core/: asgi.py  urls.py  wsgi.py
core/settings/: base.py  local.py  prod.py
newsletter/: admin.py  models.py  views.py
newsletter/migrations/: 0001_initial.py
newsletter/tests/: fixtures.py  test_newsletter_models.py
readme/: db_schema.dot  deployment.md  features.md  fitster_mockup.md
requirements/: local.txt  prod.txt
static/css/: 404.css  bootstrap.min.css  (+4 more)
templates/: 404.html  base.html  robots.txt
tests/: blog_factories.py  cart_factories.py  classes_factories.py  contact_factories.py  customer_factories.py  newsletter_factories.py  orders_factories.py  products_factories.py  reviews_factories.py  test_templates.py  users_factories.py  wishlist_factories.py
users/: admin.py  forms.py  models.py  signals.py  urls.py  views.py
utils/: paginate.py
(+155 files in other folders)
