[tool.poetry]
name = "fitster"
version = "0.1.0"
description = "Fitness Subscription Application"
authors = ["SteveAlsamarae <sarsaif@yahoo.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
asgiref = "3.6.0"
Django = "3.2.8"
django-environ = "0.8.1"
django-allauth = "0.50.0"
pytz = "2021.3"
sqlparse = "0.4.2"
Pillow = "^9.1.1"
django-resized = "0.3.11"
django-crispy-forms = "1.14.0"
django-mptt = "0.13.4"
crispy-bootstrap5 = "^0.6"
pylint-django = "^2.5.3"
django-extensions = "^3.1.5"
django-debug-toolbar = "^3.4.0"
Werkzeug = "^2.1.2"
flake8 = "^4.0.1"
black = "^22.3.0"
dj-stripe = "2.6.1"
django-htmx = "1.11.0"
sorl-thumbnail = "12.8.0"
django-markdownx = "3.0.1"
pytest-django = "4.5.2"
pytest-factoryboy = "2.3.1"
coverage = "^6.4.1"
django-admin-interface = "0.19.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
